--- a/contract/views/account_analytic_account_view.xml
+++ b/contract/views/account_analytic_account_view.xml
@@ -16,26 +16,27 @@
             <group name="main" position="after">
                 <separator string="Recurring Invoices"
                            attrs="{'invisible': [('recurring_invoices','!=',True)]}"
-                           />
+                />
                 <div>
                     <field name="recurring_invoices" class="oe_inline"/>
-                    <label for="recurring_invoices" />
+                    <label for="recurring_invoices"/>
                     <button name="recurring_create_invoice"
                             type="object"
                             attrs="{'invisible': [('recurring_invoices','!=',True)]}"
                             string="Create invoices"
                             class="oe_link"
                             groups="base.group_no_one"
-                            />
+                    />
                     <button name="contract.act_recurring_invoices"
                             type="action"
                             attrs="{'invisible': [('recurring_invoices','!=',True)]}"
                             string="⇒ Show recurring invoices"
                             class="oe_link"
-                            />
+                    />
                 </div>
                 <group col="4" attrs="{'invisible': [('recurring_invoices','!=',True)]}">
-                    <field name="contract_template_id" />
+                    <field name="contract_template_id"/>
+                    <field name="analytic_account_type"/>
                     <field name="journal_id"/>
                     <field name="pricelist_id"/>
                     <label for="recurring_interval"/>
@@ -43,11 +44,11 @@
                         <field name="recurring_interval"
                                class="oe_inline"
                                attrs="{'required': [('recurring_invoices', '=', True)]}"
-                               />
+                        />
                         <field name="recurring_rule_type"
                                class="oe_inline"
                                attrs="{'required': [('recurring_invoices', '=', True)]}"
-                               />
+                        />
                     </div>
                     <field name="recurring_invoicing_type"/>
                     <field name="date_start"/>
@@ -55,7 +56,7 @@
                 </group>
                 <label for="recurring_invoice_line_ids"
                        attrs="{'invisible': [('recurring_invoices','=',False)]}"
-                       />
+                />
                 <div attrs="{'invisible': [('recurring_invoices','=',False)]}">
                     <field name="recurring_invoice_line_ids">
                         <tree string="Account Analytic Lines" editable="bottom">
@@ -64,15 +65,17 @@
                             <field name="quantity"/>
                             <field name="uom_id"/>
                             <field name="price_unit"/>
-                            <field name="discount" groups="sale.group_discount_per_so_line" />
+                            <field name="discount" groups="sale.group_discount_per_so_line"/>
                             <field name="price_subtotal"/>
                         </tree>
                     </field>
                 </div>
                 <group string="Legend (for the markers inside invoice lines description)"
                        name="group_legend" attrs="{'invisible': [('recurring_invoices','!=',True)]}">
-                    <p colspan="2"> <strong>#START#</strong>: Start date of the invoiced period</p>
-                    <p colspan="2"> <strong>#END#</strong>: End date of the invoiced period</p>
+                    <p colspan="2"><strong>#START#</strong>: Start date of the invoiced period
+                    </p>
+                    <p colspan="2"><strong>#END#</strong>: End date of the invoiced period
+                    </p>
                 </group>
             </group>
         </field>
@@ -82,7 +85,7 @@
     <record id="view_account_analytic_account_journal_tree" model="ir.ui.view">
         <field name="name">Contract list</field>
         <field name="model">account.analytic.account</field>
-        <field name="inherit_id" ref="analytic.view_account_analytic_account_list" />
+        <field name="inherit_id" ref="analytic.view_account_analytic_account_list"/>
         <field name="mode">primary</field>
         <field name="priority" eval="9999"/>
         <field name="arch" type="xml">
@@ -107,12 +110,12 @@
                 <filter name="recurring_invoices"
                         string="Recurring Invoices"
                         domain="[('recurring_invoices','=',True)]"
-                        />
+                />
                 <group expand="0" string="Group By...">
                     <filter string="Next Invoice"
                             domain="[]"
                             context="{'group_by':'recurring_next_date'}"
-                            />
+                    />
                 </group>
             </field>
         </field>
@@ -124,7 +127,10 @@
         <field name="res_model">account.analytic.account</field>
         <field name="view_type">form</field>
         <field name="view_mode">tree,form</field>
-        <field name="context">{'is_contract':1, 'search_default_active':1, 'search_default_recurring_invoices':1}</field>
+        <field name="domain">[('analytic_account_type','=','c')]</field>
+        <field name="context">{'default_analytic_account_type' : 'c','is_contract':1, 'search_default_active':1,
+            'search_default_recurring_invoices':1}
+        </field>
         <field name="search_view_id" ref="analytic.view_account_analytic_account_search"/>
         <field name="help" type="html">
             <p class="oe_view_nocontent_create">
@@ -151,6 +157,6 @@
               parent="account.menu_finance_receivables"
               action="action_account_analytic_overdue_all"
               sequence="99"
-              />
+    />
 
 </odoo>
