--- a/contract/views/account_analytic_account_view.xml
+++ b/contract/views/account_analytic_account_view.xml
@@ -36,7 +36,7 @@
                 </div>
                 <group col="4" attrs="{'invisible': [('recurring_invoices','!=',True)]}">
                     <field name="contract_template_id"/>
-                    <field name="analytic_account_type"/>
+                    <field name="analytic_account_type" invisible="1"/>
                     <field name="journal_id"/>
                     <field name="pricelist_id"/>
                     <label for="recurring_interval"/>
